finished styling blog template

--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
   </head>
   <body>
-    <h3>Blog Post Title</h3>
-    By Osman 21st November 2014   x comments
-    <img class="blog_img" src="crazy_cat_3.jpg" alt="CATS!">
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat ea similique, explicabo iste dicta ullam inventore eos sapiente facilis, error cupiditate illo consequuntur laboriosam, aliquid enim pariatur sit ducimus voluptates. <a href="link">Read more...</a></p>
+    <h3><!-- insert title here --></h3>
+    <p>Posted by Osman, <!-- insert date here --> </p>
+    <img class="blog_img" src="" alt="Add a blog image here">
+    <p><!-- insert blog post here --> <a href="link">Read more...</a></p>
   </body>
 </html>
