added latest blog

--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -4,11 +4,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
+    <script type="text/javascript" src="../scripts/date.js"></script>
   </head>
   <body>
-    <h3><!-- insert title here --></h3>
-    <p>Posted by Osman, <!-- insert date here --> </p>
-    <img class="blog_img" src="" alt="Add a blog image here">
-    <p><!-- insert blog post here --> <a href="link">Read more...</a></p>
+    <h1></h1>
+    <h4>Posted by Osman, <span id="spanDate"></span></h4>
+    <img class="blog_img" src="../imgs/download.jpeg" alt="Add a blog image here">
+    <div class="blog_post">
+    </div>
   </body>
 </html>
