added new blog post - chefs kitchen

--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -9,7 +9,7 @@
   <body>
     <h1></h1>
     <h4>Posted by Osman, <span id="spanDate"></span></h4>
-    <img class="blog_img" src="../imgs/download.jpeg" alt="Add a blog image here">
+    <img class="blog_img" src="../imgs/" alt="Add a blog image here">
     <div class="blog_post">
     </div>
   </body>
