added responsive design page and updated index link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
   <body>
       Hello DBC!
+
+      <h3>Responsive design in action</h3>
+      <a href="5-responsive-design/starting-point.html"></a>
   </body>
 </html>
