--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
       Hello DBC!
 
       <h3>Responsive design in action</h3>
-      <a href="5-responsive-design/starting-point.html"></a>
+      <a href="5-responsive-design/starting-point.html"> My site</a>
   </body>
 </html>
