week2-7-technical-blog

--- a/blog-posts/c1-chefs-kitchen.html
+++ b/blog-posts/c1-chefs-kitchen.html
@@ -13,7 +13,7 @@
     <div class="blog_post">
       So first up the thing I loved about the video is that it set the expectations of the environment we'll be going in to pretty clearly. Its like a high energy, dynamic environment different to the conventional classroom.
 
-      My expectations changed in that I felt slightly nervous putting up so much money for a course that I worried wouldn't teach me that much in such a short amount of time. After the video and my first prep week I'm more than confident I'll learn a lot. I'm also really looking forward to developing some friendships and working with the people coming here. I never really contemplated that its quite unique in that so many people in variou stages of their lives are going to put their lives on hold and for two months will be working together. I'm really looking forward to that and find the idea pretty exciting.
+      My expectations changed in that I felt slightly nervous putting up so much money for a course that I worried wouldn't teach me that much in such a short amount of time. After the video and my first prep week I'm more than confident I'll learn a lot. I'm also really looking forward to developing some friendships and working with the people coming here. I never really contemplated that its quite unique in that so many people in various stages of their lives are going to put their lives on hold and for two months will be working together. I'm really looking forward to that and find the idea pretty exciting.
       I often spend weekends and evenings learning things by myself so I'm really looking forward to being surrounded by people who want the same thing and are as passionate about tech.
     </div>
   </body>
