adding gps challenge from week2

--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@
 
       <h3>Responsive design in action</h3>
       <a href="5-responsive-design/starting-point.html"> My site</a>
+
+      <h3>Pair programming</h3>
+      <a href="8-gps1.1/gps1.1.html">Pair Programming!</a>
   </body>
 </html>
