added link to tech blog post

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       <h3>Responsive design in action</h3>
       <a href="5-responsive-design/starting-point.html"> My site</a>
 
+      <h3>Blogpost - U1.W2 - CSS</h3>
+      <a href="blog-posts/week2_technical.html"> My site</a>
+
       <h3>Pair programming</h3>
       <a href="8-gps1.1/gps1.1.html">Pair Programming!</a>
   </body>
