--- a/index.html
+++ b/index.html
@@ -13,23 +13,40 @@
       <nav>
         <a href="http://oafridi.github.io/">Home</a>
         <a href="http://oafridi.github.io/projects/index.html">Projects</a>
-        <a href="blog-posts/index.html">Blog</a>
+        <a href="http://oafridi.github.io/blog-posts/index.html">Blog</a>
         <a href="mailto:osmanisalso@gmail.com">@Email</a>
       </nav>
-      <span class="social">        
-        <a href="http://facebook.com/osman.afridi"><img src="imgs/facebook_circle.png" alt=""></a>
-        <a href="https://github.com/oafridi"><img src="imgs/github_alt.png" alt=""></a>
-        <a href="#"><img src="imgs/linkedin_circle.png" alt=""></a>
-        <a href="https://plus.google.com/111464047303377493656/about"><img src="imgs/google_circle.png" alt=""></a>
+      <span class="social">
+
+        <a href="https://github.com/oafridi">
+          <img src="imgs/github.png" alt="github">
+        </a>
+        <a href="http://www.linkedin.com/pub/osman-afridi/">
+          <img src="imgs/linkedin_circle.png" alt="linkedin">
+        </a>
+        <a href="https://plus.google.com/111464047303377493656/about">
+          <img src="imgs/google_circle.png" alt="google">
+        </a>
+        <a href="http://facebook.com/osman.afridi">
+          <img src="imgs/facebook_circle.png" alt="facebook">
+        </a>
+        <a href="https://bitbucket.org/sircommitsalot/">
+          <img src="imgs/bitbucket.png" alt="bitbucket">
+        </a>
+
       </span>
     </header>
 
     <div class="main">
       <section class="about">
-        <h3>About me</h3>
-        <p>Welcome to the home of Osman Afridi! </p>
+        
+        <h3>Welcome</h3>
+        <p>This is the homepage of Osman Afridi. I am a software developer. Many interesting things happen here.</p>
 
-        <p>I am a software developer with a broad history in technology. Having graduated in 2007 with a degree in computer science I've gone on to work for a 68,000 person IT consultancy <a href="http://www.cgi.com/en" target="blank">CGI</a>, co-founded a 3 person startup <a href="http://www.matchnurse.com" target="blank">Matchnurse</a> and currently work for the 300+ person rapidly growing startup-come-huge-success-story <a href="http://www.atlassian.com" target="blank">Atlassian.</a></p>
+        <h4>A cursory intro...</h4>
+        <p>
+          I graduated in 2007 with a degree in computer science. Since then I've worked for a 68,000 person IT consultancy <a href="http://www.cgi.com/en" target="blank">CGI</a>, co-founded a 3 person startup <a href="http://www.matchnurse.com" target="blank">Matchnurse</a> and currently work for the 300+ person rapidly growing startup-come-huge-success-story <a href="http://www.atlassian.com" target="blank">Atlassian.</a>
+        </p>
 
         <p>I wear a lot of hats and work across all tech stacks. Lately I've been interested in Ruby on rails and the javascript space with a particular interest in backbone and node.js. Prior to that I worked with Java and am glad to leave behind the nightmare of constant type declarations and maven-hell.</p>
         <p>Outside of tech I enjoy travelling and hope to get to explore each and every country in the world before time runs out - I've managed to travel to most continents excluding Africa and Antarctica which are next on the list. I'm also a huge bookworm but have a nasty obsessive compulsive habit of committing to books long after I lose interest. Other things I enjoy in no particular order - the music of Debussy, and Edvard Grieg, cups of tea, the Lion King, beans (Heinz - I can't stress this enough) on toast and a million other things.</p>
@@ -38,25 +55,14 @@
 
       <div class="profile">
         <img src="imgs/profile.png" alt="profile_image">
-        <p>Osman Afridi, Software developer</p>
-
+        <p>Osman Afridi</p>
       </div>
     </div>
 
-
-    <footer>(c) Copyright 2014</footer>
+    <footer>(c) Osman Afridi 2014</footer>
 
   </div>
 
-
-  <!-- <h3>Responsive design in action</h3>
-  <a href="5-responsive-design/starting-point.html"> My site</a>
-
-  <h3>Blogpost - U1.W2 - CSS</h3>
-  <a href="blog-posts/week2_technical.html"> My site</a>
-
-  <h3>Pair programming</h3>
-  <a href="8-gps1.1/gps1.1.html">Pair Programming!</a> -->
 </body>
 
 </html>
