--- a/projects/index.html
+++ b/projects/index.html
@@ -39,14 +39,14 @@
 
     <div class="main">
       <section class="about">
-        <h1>Blogs</h1>
+        <h1>Projects</h1>
         <ul>
-          <li><a href="c1-chefs-kitchen.html">Chefs Kitchen</a>
+          <!-- <li><a href="c1-chefs-kitchen.html">Chefs Kitchen</a>
           </li>
           <li><a href="t1-compare-websites.html">My top 3 websites</a>
           </li>
           <li><a href="week2_technical.html">Week 2 technical blog</a>
-          </li>
+          </li> -->
         </ul>
       </section>
 
