fixed nav links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <header>
       <nav>
         <a href="http://oafridi.github.io/">Home</a>
-        <a href="http://oafridi.github.io/projects/index.html">Projects</a>
-        <a href="http://oafridi.github.io/blog-posts/index.html">Blog</a>
+        <a href="projects/index.html">Projects</a>
+        <a href="blog-posts/index.html">Blog</a>
         <a href="mailto:osmanisalso@gmail.com">@Email</a>
       </nav>
       <span class="social">
