--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
       <nav>
         <a href="http://oafridi.github.io/">Home</a>
         <a href="http://oafridi.github.io/projects/index.html">Projects</a>
-        <a href="blog-posts/index.html">Blog</a>
+        <a href="http://oafridi.github.io/blog-posts/index.html">Blog</a>
         <a href="mailto:osmanisalso@gmail.com">@Email</a>
       </nav>
       <span class="social">
