added initial blog posts for week 3

--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -47,6 +47,10 @@
           </li>
           <li><a href="week2_technical.html">Week 2 technical blog</a>
           </li>
+           <li><a href="week3_technical.html">Week 2 technical blog</a>
+          </li>
+           <li><a href="week3_cultural.html">Week 2 technical blog</a>
+          </li>
         </ul>
       </section>
 
