amended blog styling

--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -1,16 +1,53 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
-    <script type="text/javascript" src="../scripts/date.js"></script>
-  </head>
-  <body>
-    <h1></h1>
-    <h4>Posted by Osman, <span id="spanDate"></span></h4>
-    <img class="blog_img" src="../imgs/" alt="Add a blog image here">
-    <div class="blog_post">
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
+  <script type="text/javascript" src="../scripts/date.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <nav>
+        <a href="http://oafridi.github.io/">Home</a>
+        <a href="http://oafridi.github.io/projects/index.html">Projects</a>
+        <a href="http://oafridi.github.io/blog-posts/index.html">Blog</a>
+        <a href="mailto:osmanisalso@gmail.com">@Email</a>
+      </nav>
+      <span class="social">
+
+        <a href="https://github.com/oafridi">
+          <img src="../imgs/github.png" alt="github">
+        </a>
+        <a href="http://www.linkedin.com/pub/osman-afridi/">
+          <img src="../imgs/linkedin_circle.png" alt="linkedin">
+        </a>
+        <a href="https://plus.google.com/111464047303377493656/about">
+          <img src="../imgs/google_circle.png" alt="google">
+        </a>
+        <a href="http://facebook.com/osman.afridi">
+          <img src="../imgs/facebook_circle.png" alt="facebook">
+        </a>
+        <a href="https://bitbucket.org/sircommitsalot/">
+          <img src="../imgs/bitbucket.png" alt="bitbucket">
+        </a>
+
+      </span>
+    </header>
+
+    <div class="main">
+      <section class="about">
+        <h1>Blog</h1>        
+        <h5>Posted by Osman,<span id="spanDate"></span></h5>
+        <img class="blog_img" src="../imgs/" alt="Add a blog image here">
+        <div class="blog_post"></div>
+        <a href="http://osmanafridi.com/blog-posts/index.html">Back</a>
+      </section>
     </div>
-  </body>
+    <footer>(c) Osman Afridi 2014</footer>
+  </div>
+</body>
 </html>
