--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -1,22 +1,63 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
-    <script type="text/javascript" src="../scripts/date.js"></script>
-  </head>
-  <body>
-    <h1>My top three favorite sites ever!</h1>
-    <h4>Posted by Osman, <span id="spanDate"></span></h4>
-    <img class="blog_img" src="../imgs/download.jpeg" alt="Add a blog image here">
-    <div class="blog_post">
-       <p><a href="http://www.bbc.com/news/">BBC News</a>
-        This is one of my favorite sites to visit to get the latest news. As well as being a consistent source of reliable news it has well thought out presentation and simple design. It's very easy to skim for news items of interest and find the most popular news items simply and easily. </p>
-      <p><a href="http://www.amazon.com/">Amazon</a>
-        I visit this site frequently to buy almost everything from usb cables to Heinz baked beans. The layout can be a little overwhelming as there is so much presented but the search bar and grid-like presentation make it easy to find what I'm looking for. Minor quirks that I find irritating - the price per ounce of food items doesn't display consistently!</p>
-      <p><a href="https://news.ycombinator.com/">Hacker News</a>
-        I like this site a lot as its an excellent source of news involving technology and the tech industry. The comments section also has some very interesting opinions. The website is simple - a numbered list of popular posts with a link to comments. Its minimalist design is a credit to it and makes navigating the site easy. One annoying thing I find is that I have to click through the link and then close the new window and then click on the comments to see them. It would be nice if it presented the article in a side bar with the comments just below for example. </p>
+
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
+  <script type="text/javascript" src="../scripts/date.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <nav>
+        <a href="http://oafridi.github.io/">Home</a>
+        <a href="http://oafridi.github.io/projects/index.html">Projects</a>
+        <a href="http://oafridi.github.io/blog-posts/index.html">Blog</a>
+        <a href="mailto:osmanisalso@gmail.com">@Email</a>
+      </nav>
+      <span class="social">
+
+        <a href="https://github.com/oafridi">
+          <img src="../imgs/github.png" alt="github">
+        </a>
+        <a href="http://www.linkedin.com/pub/osman-afridi/">
+          <img src="../imgs/linkedin_circle.png" alt="linkedin">
+        </a>
+        <a href="https://plus.google.com/111464047303377493656/about">
+          <img src="../imgs/google_circle.png" alt="google">
+        </a>
+        <a href="http://facebook.com/osman.afridi">
+          <img src="../imgs/facebook_circle.png" alt="facebook">
+        </a>
+        <a href="https://bitbucket.org/sircommitsalot/">
+          <img src="../imgs/bitbucket.png" alt="bitbucket">
+        </a>
+
+      </span>
+    </header>
+
+    <div class="main">
+      <section class="about">
+        <h1>My top three favorite sites ever!</h1>
+        <h5>Posted by Osman,
+          <span id="spanDate"></span>
+        </h5>
+        <img class="blog_img" src="../imgs/download.jpeg" alt="Add a blog image here">
+        <div class="blog_post">
+          <p><a href="http://www.bbc.com/news/">BBC News</a>
+            This is one of my favorite sites to visit to get the latest news. As well as being a consistent source of reliable news it has well thought out presentation and simple design. It's very easy to skim for news items of interest and find the most popular news items simply and easily.</p>
+          <p><a href="http://www.amazon.com/">Amazon</a>
+            I visit this site frequently to buy almost everything from usb cables to Heinz baked beans. The layout can be a little overwhelming as there is so much presented but the search bar and grid-like presentation make it easy to find what I'm looking for. Minor quirks that I find irritating - the price per ounce of food items doesn't display consistently!</p>
+          <p><a href="https://news.ycombinator.com/">Hacker News</a>
+            I like this site a lot as its an excellent source of news involving technology and the tech industry. The comments section also has some very interesting opinions. The website is simple - a numbered list of popular posts with a link to comments. Its minimalist design is a credit to it and makes navigating the site easy. One annoying thing I find is that I have to click through the link and then close the new window and then click on the comments to see them. It would be nice if it presented the article in a side bar with the comments just below for example.</p>
+        </div>
+        <a href="http://osmanafridi.com/blog-posts/index.html">Back</a>
+      </section>
     </div>
-  </body>
+    <footer>(c) Osman Afridi 2014</footer>
+  </div>
+</body>
+
 </html>
