--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -43,7 +43,9 @@
         <h1>Blog</h1>        
         <h5>Posted by Osman,<span id="spanDate"></span></h5>
         <img class="blog_img" src="../imgs/" alt="Add a blog image here">
-        <div class="blog_post"></div>
+        <div class="blog_post">
+          <<!--> Insert blog post here</!-->
+        </div>
         <a href="http://osmanafridi.com/blog-posts/index.html">Back</a>
       </section>
     </div>
