--- a/index.html
+++ b/index.html
@@ -19,19 +19,19 @@
       <span class="social">
 
         <a href="https://github.com/oafridi">
-          <img src="imgs/github.png" alt="github">
+          <img src="imgs/header/github.png" alt="github">
         </a>
         <a href="http://www.linkedin.com/pub/osman-afridi/">
-          <img src="imgs/linkedin_circle.png" alt="linkedin">
+          <img src="imgs/header/linkedin_circle.png" alt="linkedin">
         </a>
         <a href="https://plus.google.com/111464047303377493656/about">
-          <img src="imgs/google_circle.png" alt="google">
+          <img src="imgs/header/google_circle.png" alt="google">
         </a>
         <a href="http://facebook.com/osman.afridi">
-          <img src="imgs/facebook_circle.png" alt="facebook">
+          <img id="fb" src="imgs/header/facebook_circle-128.png" alt="facebook">
         </a>
         <a href="https://bitbucket.org/sircommitsalot/">
-          <img src="imgs/bitbucket.png" alt="bitbucket">
+          <img src="imgs/header/bitbucket_circle.png" alt="bitbucket">
         </a>
 
       </span>
