fixed broken links

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <img src="imgs/header/google_circle.png" alt="google">
         </a>
         <a href="http://facebook.com/osman.afridi">
-          <img id="fb" src="imgs/header/facebook_circle-128.png" alt="facebook">
+          <img src="imgs/header/facebook_circle-128.png" alt="facebook">
         </a>
         <a href="https://bitbucket.org/sircommitsalot/">
           <img src="imgs/header/bitbucket_circle.png" alt="bitbucket">
