--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -51,6 +51,8 @@
           </li>
            <li><a href="week3_cultural.html">Thinking and learning styles</a>
           </li>
+          <li><a href="week4_technical.html">Enumerable methods</a>
+          </li>
         </ul>
       </section>
 
