--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -53,6 +53,8 @@
           </li>
           <li><a href="week4_technical.html">Enumerable methods</a>
           </li>
+          <li><a href="week4_cultural.html">What's eating the tech industry</a>
+          </li>
         </ul>
       </section>
 
