--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -55,6 +55,10 @@
           </li>
           <li><a href="week4_cultural.html">What's eating the tech industry</a>
           </li>
+          <li><a href="week5_technical.html">Down with OOP</a>
+          </li>
+          <li><a href="week5_cultural.html">Pair programming</a>
+          </li>
         </ul>
       </section>
 
