--- a/blog-posts/week5_technical.html
+++ b/blog-posts/week5_technical.html
@@ -27,11 +27,11 @@
         </h5>
         <!-- <img class="blog_img" src="../imgs/JW_Marriott_CHEF_NOLA.jpg" alt="Add a blog image here"> -->
         <div class="blog_post">
-          <p>Let's dive straight into ruby classes. We're going to build a class that will help keep a record of students in our fictional high school - DBC High. The students will have various data associated with them, to keep it simple we're going to add just three to begin with. These will form the attributes of our class: 
+          <p>Let's dive straight into ruby classes. We're going to build a class that will help keep a record of British prime ministers. Each prime minister has various data associated with them, to keep it simple we're going to add just three to begin with. These will form the attributes of our class: 
           <ul> 
             <li>first name</li>
             <li>last name</li>
-            <li>date of birth</li>              
+            <li>year of birth</li>              
           </ul>
           </p>
 
@@ -39,89 +39,84 @@
 
           <pre>
             <code> 
-              class Student                          
+              class PrimeMinister                          
               end            
             </code>
           </pre>
 
-          <p>Now when we create a new student we can instantiate this class. Instantiation is the way we create an instance of our class. We do this using the 'new' keyword. For example 'John Major' has just joined our school, let's create a new student: </p>
+          <p>Now when a new prime minister is elected we can add them by simply instantiating this class. Think of the class as a blueprint and the instance of the class as the actual object we are creating. To instantiate we use the 'new' keyword. For example 'John Major' has just become prime minister, let's create a new PrimeMinister: </p>
 
           <pre>
             <code> 
-              john_major = Student.new            
+              john_major = PrimeMinister.new            
             </code>
           </pre>
 
-          <p>We now have a john_major object created from the Student class. However we don't have any of the attributes for John that we need - his date of birth, name etc. So how do we do that? Well these attributes will be passed to our class so we need some way of receiving them. In Ruby we can do this using an 'initialize' method which will take the values we pass our Class. Let's see how this works:</p>
+          <p>We now have a john_major object created from the PrimeMinister class. However we don't have any of the attributes for John that we need - his year of birth, name etc. So how do we do that? Well these attributes will be passed as parameters so we need some way of receiving them. In Ruby we can do this using an 'initialize' method which will take the values we pass and store them to our object (initialize is similar to a constructor in languages such as Java). Let's see how this works:</p>
 
           <pre>
             <code> 
-              class Student
-                def initialize(first_name,last_name,dob)
+              class PrimeMinister
+                def initialize(first_name,last_name,year)
                   @first_name = first_name
                   @last_name = last_name
-                  @dob = dob
+                  @year = year
                 end                          
               end            
             </code>
           </pre>
 
-          <p>Notice the @ sign in front of some variables. These are instance variables and belong to the instance. Now let's go ahead and create the john_major object again but this time with the attributes: </p>
+          <p>Notice the @ sign in front of some variables. These are instance variables and belong to the instance - they don't share values with other instances. Now let's go ahead and create the john_major object again but this time with the attributes: </p>
 
           <pre>
             <code> 
-              john_major = Student.new("John", "Major", 35)            
+              john_major = PrimeMinister.new("John", "Major", 1944)            
             </code>
           </pre>
 
-          <p>We now have a john_major object which contains data related to John. We can see his age easily using the following notation: john_major.dob => 01/18/1983</p>
-
-          <p>As well as the attributes we also want to know the students age without having to calculate it ourselves. Therefore let</p>
-
-          <p>First we define the class body:</p>
-
-          
-
-          <p>Then we define the methods:</p>
+          <p>We now have a john_major object which contains data related to John. But how can we see this data? Instance variables are visible to the class but in order to get access to them from outside of the class we need some method to display them. We can use special methods known as getter methods for this. Let's see how a getter method can be used to get the first and last name of our student:</p>
 
           <pre>
             <code> 
-              class Calculator                          
-                def add(a,b)
-                end
-
-                def subtract(a,b)
-                end
+              class PrimeMinister
+                def getInfo
+                  "#{@first_name} #{@last_name} #{year}"
+                end                        
               end            
             </code>
           </pre>
 
-          <p>The first thing to notice is that these are both instance methods. Instance methods don't belong to the class but to the instance of the class. We'll see in a minute how to  to instantiate a class but first let's define our methods. We can see that each takes two arguments and will return either the values added together or subtracted: </p>
+          <p>And now to access:</p>
+          <pre>
+            <code> 
+              john_major.getInfo             
+            </code>
+          </pre>
+
+          <p>Which returns the info - 'John Major 1944'.</p>
+
+          <p>However John Major has inspected our instance we created for him and reminds us that he was actually born in 1943... how could we change that? One way would be to create an entirely new object and pass the year once again. But we would then end up with lots of redundant objects. A better way would be to create what is known as a setter method. Let's see how that works. </p>
 
           <pre>
             <code> 
-              class Calculator                          
+              class PrimeMinister
+                def setYear(year)
+                  @year = year
+                end                        
               end            
             </code>
           </pre>
 
-          <p>Then we define the methods:</p>
-
+          <p>And to use it we could simply invoke the method and pass our new year like so</p>
           <pre>
             <code> 
-              class Calculator                          
-                def add(a,b)
-                  a+b
-                end
-
-                def subtract(a,b)
-                  a-b
-                end
-              end            
+              john_major.setYear(1943)
             </code>
           </pre>
 
+          <p>And now John's year of birth has changed and he's a happy man.</p>
 
+          <img src="../imgs/john.jpeg" alt="Johnny Major">
 
         </div>
         <a href="http://osmanafridi.com/blog-posts/index.html">Back</a>
