--- a/projects/index.html
+++ b/projects/index.html
@@ -12,8 +12,8 @@
     <header>
       <nav>
         <a href="http://oafridi.github.io/">Home</a>
-        <a href="projects/index.html">Projects</a>
-        <a href="blog-posts/index.html">Blog</a>
+        <a href="index.html">Projects</a>
+        <a href="../blog-posts/index.html">Blog</a>
         <a href="mailto:osmanisalso@gmail.com">@Email</a>
       </nav>
       <span class="social">
