--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -21,14 +21,14 @@
 
     <div class="main">
       <section class="about">
-        <h1>My top three favorite sites ever!</h1>
+        <h1>Three sites that do it well</h1>
         <h5>Posted by Osman,
-          <span id="spanDate"></span>
+          <span id="spanDate">7th Sept 2014</span>
         </h5>
         <img class="blog_img" src="../imgs/download.jpeg" alt="Add a blog image here">
         <div class="blog_post">
           <p><a href="http://www.bbc.com/news/">BBC News</a>
-            This is one of my favorite sites to visit to get the latest news. As well as being a consistent source of reliable news it has well thought out presentation and simple design. It's very easy to skim for news items of interest and find the most popular news items simply and easily.</p>
+            A decent site to get the latest news. As well as being a consistent source of reliable news it has well thought out presentation and simple design. It's very easy to skim for news items of interest and find the most popular news items simply and easily.</p>
           <p><a href="http://www.amazon.com/">Amazon</a>
             I visit this site frequently to buy almost everything from usb cables to Heinz baked beans. The layout can be a little overwhelming as there is so much presented but the search bar and grid-like presentation make it easy to find what I'm looking for. Minor quirks that I find irritating - the price per ounce of food items doesn't display consistently!</p>
           <p><a href="https://news.ycombinator.com/">Hacker News</a>
