--- a/blog-posts/week3_technical.html
+++ b/blog-posts/week3_technical.html
@@ -23,7 +23,7 @@
       <section class="about">
         <h1>Javascript</h1>
         <h5>Posted by Osman,
-          <span id="spanDate"></span>
+          <span id="spanDate">23rd Aug 2014</span>
         </h5>
         <img class="blog_img" src="../imgs/js.jpeg" alt="Add a blog image here">
         <div class="blog_post">
