--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -23,7 +23,7 @@
       <section class="about">
         <h1>Enumerable Methods</h1>
         <h5>Posted by Osman,
-          <span id="spanDate"></span>
+          <span id="spanDate">1st Sept 2014</span>
         </h5>
         <img class="blog_img" src="../imgs/collections_enum.jpg" alt="Add a blog image here">
         <div class="blog_post">
