added new blogposts and fixed overflow to prevent scrollbar

--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -59,6 +59,10 @@
           </li>
           <li><a href="week5_cultural.html">Pair programming</a>
           </li>
+          <li><a href="week6_technical.html">OOP vs Funct programming</a>
+          </li>
+          <li><a href="week6_cultural.html">Stereotype threat</a>
+          </li>
         </ul>
       </section>
 
