--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -1,48 +1,27 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
+<section class="about">
+  <h1>Enumerable Methods</h1>
+  <h5>Posted by Osman,
+    <span id="spanDate">1st Sept 2014</span>
+  </h5>
+  <img class="blog_img" src="../imgs/collections_enum.jpg" alt="Add a blog image here">
+  <div class="blog_post">
+    <h4>Enumerable</h4>
 
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Document</title>
-  <link rel="stylesheet" type="text/css" href="../stylesheets/blog-stylesheet.css">
-  <script type="text/javascript" src="../scripts/date.js"></script>
-</head>
+    <p>The enumerable mixin provides a number of very useful methods such as collect and find. A mixin is a module which can be 'mixed in' to a class to add extra functionality (it's one of the ways Ruby can overcome the limitations of single inheritance). As a side note - any class that 'mixes in' the Enumerable module has to define the #each method. The methods of Enumerable can be seen in the <a href="http://ruby-doc.org/core-2.0.0/Enumerable.html">ruby-docs (ruby 2.0.0).</a> However the method I'm going to concentrate on in this post is group_by. Details below...</p>
 
-<body>
-  <div class="container">
-    <header>
-      <nav>
-        <a href="http://oafridi.github.io/">Home</a>
-        <a href="http://oafridi.github.io/projects/index.html">Projects</a>
-        <a href="http://oafridi.github.io/blog-posts/index.html">Blog</a>
-        <a href="mailto:osmanisalso@gmail.com">@Email</a>
-      </nav>
-    </header>
+    <h5>group_by</h5>
 
-    <div class="main">
-      <section class="about">
-        <h1>Enumerable Methods</h1>
-        <h5>Posted by Osman,
-          <span id="spanDate">1st Sept 2014</span>
-        </h5>
-        <img class="blog_img" src="../imgs/collections_enum.jpg" alt="Add a blog image here">
-        <div class="blog_post">
-          <h4>Enumerable</h4>
+    <p>The definition of group_by taken from ruby-doc is:</p>
 
-          <p>The enumerable mixin provides a number of very useful methods such as collect and find. A mixin is a module which can be 'mixed in' to a class to add extra functionality (it's one of the ways Ruby can overcome the limitations of single inheritance). As a side note - any class that 'mixes in' the Enumerable module has to define the #each method.
+    <p>Groups the collection by result of the block. Returns a hash where the keys are the evaluated result from the block and the values are arrays of elements in the collection that correspond to the key.If no block is given an enumerator is returned.</p>
 
-          The methods of Enumerable can be seen in the <a href="http://ruby-doc.org/core-2.0.0/Enumerable.html">ruby-docs (ruby 2.0.0).</a> However the method I'm going to concentrate on in this post is group_by. Details below...</p>
+    <p>Simply translated - the method iterates over a collection passing each element to a block and returns a hash. The hash key is taken from the returned value from the block and the elements are grouped by this key</p>
 
-          <h5>group_by</h5>
-
-          <p>The definition of group_by taken from ruby-doc is: </p>
-
-          <p>Groups the collection by result of the block. Returns a hash where the keys are the evaluated result from the block and the values are arrays of elements in the collection that correspond to the key.If no block is given an enumerator is returned.</p>
-
-          <p>Simply translated - the method iterates over a collection passing each element to a block and returns a hash. The hash key is taken from the returned value from the block and the elements are grouped by this key</p>
-
-          <p> An example of how it can be used is given below. Here the block returns the length of each name which becomes the hash key and each element of the array is grouped by this value</p>
-          <pre>
+    <p>An example of how it can be used is given below. Here the block returns the length of each name which becomes the hash key and each element of the array is grouped by this value</p>
+    <pre>
           <code>
             names = ["osman", "joe", "kelly"]
             names.group_by { |name| name.length }   
@@ -50,18 +29,18 @@
           </code> 
           </pre>
 
-          <p>We can also use it for grouping objects by the type of class they belong to: </p>
+    <p>We can also use it for grouping objects by the type of class they belong to:</p>
 
-          <pre>
+    <pre>
             <code>
               ["Osman", 1.5, "Joe", 2].group_by(&:class)
               => {String=>["Osman", "Joe"], Float=>[1.5], Fixnum=>[2]}
             </code> 
           </pre>
 
-          <p>group_by can also be used on hashes as well as arrays.</p>
+    <p>group_by can also be used on hashes as well as arrays.</p>
 
-          <pre>
+    <pre>
             <code>
               hobbies = {"Joe" => "football",
               "Osman" => "football",
@@ -80,14 +59,8 @@
             </code>
           </pre>
 
-          <p>As you can tell this is quite a powerful method that can be utilized in lots of different ways.</p>
-          
-        </div>
-        <a href="http://osmanafridi.com/blog-posts/index.html">Back</a>
-      </section>
-    </div>
-    <footer>(c) Osman Afridi 2014</footer>
-  </div>
-</body>
+    <p>As you can tell this is quite a powerful method that can be utilized in lots of different ways.</p>
 
-</html>
+  </div>
+  <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
+</section>
