--- a/index.html
+++ b/index.html
@@ -1,43 +1,6 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="UTF-8">
-  <title>Home of Osman Afridi</title>
-  <link rel="stylesheet" href="stylesheets/index.css">
-</head>
-
-<body>
-  <div class="container">
-    <header>
-      <nav>
-        <a href="http://oafridi.github.io/">Home</a>
-        <a href="projects/index.html">Projects</a>
-        <a href="blog-posts/index.html">Blog</a>
-        <a href="mailto:osmanisalso@gmail.com">@Email</a>
-      </nav>
-      <span class="social">
-
-        <a href="https://github.com/oafridi">
-          <img src="imgs/header/github.png" alt="github">
-        </a>
-        <a href="http://www.linkedin.com/pub/osman-afridi/">
-          <img src="imgs/header/linkedin_circle.png" alt="linkedin">
-        </a>
-        <a href="https://plus.google.com/111464047303377493656/about">
-          <img src="imgs/header/google_circle.png" alt="google">
-        </a>
-        <a href="http://facebook.com/osman.afridi">
-          <img src="imgs/header/facebook_circle-128.png" alt="facebook">
-        </a>
-        <a href="https://bitbucket.org/sircommitsalot/">
-          <img src="imgs/header/bitbucket_circle.png" alt="bitbucket">
-        </a>
-
-      </span>
-    </header>
-
-    <div class="main">
+---
+layout: default
+---
       <section class="about">
         
         <h3>Welcome</h3>
@@ -57,12 +20,3 @@
         <img src="imgs/profile.png" alt="profile_image">
         <p>Osman Afridi</p>
       </div>
-    </div>
-
-    <footer>(c) Osman Afridi 2014</footer>
-
-  </div>
-
-</body>
-
-</html>
