added syntax highlighting

--- a/blog-posts/blog-template.html
+++ b/blog-posts/blog-template.html
@@ -3,8 +3,7 @@ layout: default
 ---
 <section class="about">
   <h1>Blog</h1>
-  <h5>Posted by Osman,
-    <span id="spanDate"></span>
+  <h5>Posted by Osman, {{ site.time | date: '%y' }}
   </h5>
   <img class="blog_img" src="../imgs/" alt="Add a blog image here">
   <div class="blog_post">
