--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -4,7 +4,7 @@ layout: default
 <section class="about">
   <h1>Blog</h1>
   <ul>
-    <li><a href="c1-chefs-kitchen.html">Chefs Kitchen</a>
+    <!-- <li><a href="c1-chefs-kitchen.html">Chefs Kitchen</a> -->
     </li>
     <li><a href="t1-compare-websites.html">Venture into website design</a>
     </li>
