--- a/blog-posts/week2_technical.html
+++ b/blog-posts/week2_technical.html
@@ -2,10 +2,8 @@
 layout: default
 ---
 <section class="about">
-  <h1>What is the difference between Margin, Border, and Padding?</h1>
-  <h5>Posted by Osman,
-    <span id="spanDate"></span>
-  </h5>
+  <h1>Margin vs Border vs Padding</h1>
+  <h5>Posted by Osman, 2014-09-13</h5>
   <img class="blog_img" src="../imgs/box-model.gif" alt="Add a blog image here">
   <div class="blog_post">
     <p>When it comes to CSS a conversation about margins, borders and padding would have to begin with a discussion about the box model. So what is it?</p>
@@ -19,11 +17,17 @@ layout: default
         <li>Padding - goes around the content</li>
       </ol>
 
-      Lets look at an example of some CSS:
+      Take a look at the example CSS here:
 
-      <pre>
-              <code>div { width: 220px; padding: 10px; border: 5px solid gray; margin: 0px; }</code>
-            </pre>
+      {% highlight css %}      
+      div { 
+        width: 220px; 
+        padding: 10px; 
+        border: 5px solid gray; 
+        margin: 0px; 
+      }
+      {% endhighlight %}
+
       What's important to note is that despite the fact the width has been set to 220px the total width of the element should take into account the padding, the border and margin if they have been given values. You may be wondering why he have margins, borders and padding and when to use each. A quick rundown of the differences :
 
       <ul>
