--- a/blog-posts/week6_cultural.html
+++ b/blog-posts/week6_cultural.html
@@ -3,9 +3,7 @@ layout: default
 ---
 <section class="about">
   <h1>Blog</h1>
-  <h5>Posted by Osman,
-    <span id="spanDate"></span>
-  </h5>
+  <h5>Posted by Osman, 2014-09-13</h5>
   <img class="blog_img" src="../imgs/" alt="Add a blog image here">
   <div class="blog_post">
     <<!-->Insert blog post here</!-->
