minor style amendments

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <section class="about">
 
   <h2>Welcome</h2>
-  <p>This is the homepage of Osman Afridi. I am a Ruby on Rails developer.</p>
+  <p>This is the homepage of Osman Afridi. I am a software developer focusing primarily on Ruby on Rails.</p>
 
   <h4>A cursory intro...</h4>
   <p>
