added disqus and made style changes to syntax highlighting

--- a/blog-posts/week4_technical.html
+++ b/blog-posts/week4_technical.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 <section class="about">
   <h1>Enumerable Methods</h1>
@@ -21,27 +22,22 @@ layout: default
     <p>Simply translated - the method iterates over a collection passing each element to a block and returns a hash. The hash key is taken from the returned value from the block and the elements are grouped by this key</p>
 
     <p>An example of how it can be used is given below. Here the block returns the length of each name which becomes the hash key and each element of the array is grouped by this value</p>
-    <pre>
-          <code>
+    {% highlight ruby %}
             names = ["osman", "joe", "kelly"]
             names.group_by { |name| name.length }   
             #=> {5=>["osman", "kelly"], 3=>["joe"]}
-          </code> 
-          </pre>
+    {% endhighlight %}
 
     <p>We can also use it for grouping objects by the type of class they belong to:</p>
 
-    <pre>
-            <code>
+    {% highlight ruby %}
               ["Osman", 1.5, "Joe", 2].group_by(&:class)
-              => {String=>["Osman", "Joe"], Float=>[1.5], Fixnum=>[2]}
-            </code> 
-          </pre>
+    => {String=>["Osman", "Joe"], Float=>[1.5], Fixnum=>[2]}
+    {% endhighlight %}
 
     <p>group_by can also be used on hashes as well as arrays.</p>
 
-    <pre>
-            <code>
+    {% highlight ruby %}
               hobbies = {"Joe" => "football",
               "Osman" => "football",
               "Mike" => "foosball",
@@ -56,8 +52,7 @@ layout: default
               "foosball"=>[["Mike", "foosball"],["David", "foosball"]],
               "tennis"=>[["Kelly", "tennis"]]
               }
-            </code>
-          </pre>
+    {% endhighlight %}
 
     <p>As you can tell this is quite a powerful method that can be utilized in lots of different ways.</p>
 
