--- a/blog-posts/week5_technical.html
+++ b/blog-posts/week5_technical.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+comments: true
 ---
 <section class="about">
   <h1>Object Oriented Programming in Ruby</h1>
@@ -86,3 +87,4 @@ end
   </div>
   <p> <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a> </p>
 </section>
+
