week7 cultural completed

--- a/blog-posts/index.html
+++ b/blog-posts/index.html
@@ -26,6 +26,10 @@ layout: default
     </li>
     <li><a href="week6_cultural.html">Stereotype threat</a>
     </li>
+    <li><a href="week7_technical.html">To SQL or not to SQL</a>
+    </li>
+    <li><a href="week7_cultural.html">Values</a>
+    </li>
   </ul>
 </section>
 
