--- a/blog-posts/t1-compare-websites.html
+++ b/blog-posts/t1-compare-websites.html
@@ -1,7 +1,7 @@
 ---
-layout: default
+layout: page
+comments: true
 ---
-<section class="about">
   <h1>Design - three sites that do it well</h1>
   <h5>Posted by Osman,
     <span id="spanDate">7th Sept 2014</span>
@@ -17,4 +17,3 @@ layout: default
     </ul>
   </div>
   <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
