--- a/blog-posts/week2_technical.html
+++ b/blog-posts/week2_technical.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: page
 comments: true
 ---
-<section class="about">
   <h1>Margin vs Border vs Padding</h1>
   <h5>Posted by Osman, 2014-09-13</h5>
   <img class="blog_img" src="../imgs/box-model.gif" alt="Add a blog image here">
@@ -42,4 +41,3 @@ comments: true
     </p>
   </div>
   <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
