--- a/blog-posts/week3_cultural.html
+++ b/blog-posts/week3_cultural.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: page
 comments: true
 ---
-<section class="about">
   <h1>Mind Styles</h1>
   <h5>Posted by Osman,
     <span id="spanDate">23rd Aug 2014</span>
@@ -17,4 +16,3 @@ comments: true
 
   </div>
   <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
