--- a/blog-posts/week3_technical.html
+++ b/blog-posts/week3_technical.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: page
 comments: true
 ---
-<section class="about">
   <h1>Javascript</h1>
   <h5>Posted by Osman,
     <span id="spanDate">23rd Aug 2014</span>
@@ -22,4 +21,3 @@ comments: true
     <p>Overall Javascript is ubiquitous and the web simply would not function nearly as well as it does without it (don't believe me - try disabling Javascript in your browser and see how you get by for the next week). Javascript is here to stay.</p>
   </div>
   <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
