--- a/blog-posts/week6_technical.html
+++ b/blog-posts/week6_technical.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: page
 comments: true
 ---
-<section class="about">
   <h1>Classes vs Modules</h1>
   <h5>Posted by Osman, 2014-09-13
   </h5>
@@ -29,5 +28,3 @@ comments: true
 
  </div>
 <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
-
