--- a/blog-posts/week7_cultural.html
+++ b/blog-posts/week7_cultural.html
@@ -1,9 +1,7 @@
 ---
-layout: default
-<!-- comments: true -->
+layout: page
+comments: true
 ---
-
-<section class="about">
   <h1>Values</h1>
   <h5>{{ site.time | date: '%B %d, %Y' }} by Osman Afridi</h5>
   <div class="blog_post">
@@ -17,27 +15,5 @@ layout: default
     <p>The last topic somebody asked me for advice on was to do with a personal relationship.</p>
 
     <p>Often in times where my confidence is shaky or I feel a little unnerved I find reflecting on my values helps anchor me and reminds me of my achievements.</p>
-
-
   </div>
   <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
-
-<!-- ## Release 4: Advice
-
-## Release 5: Values and Stereotype threat
-How do you feel when you think about your values? Do you think it can help you mediate stereotype threat if you recognize you feel it? 
-
-Can you think of any other exercises you can use to help you when you are feeling down (for whatever reason) at DBC? 
-
-## Release 6: Publish
-Link to your blog on the index of your github.io site and push your changes.
-
-## Release 7: Promote 
-
-Now it's time to show off your work and share your knowledge with your cohortmates using Twitter! 
-
-Tweet your blog post using #DBCValue
-
-## Release 8: Read
-Read at least one post another student wrote. Give the author A.S.K (Actionable, specific, and kind) feedback as an issue on their repo or a tweet! -->
