--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 ---
 layout: default
 ---
-<section class="about">
-
   <h2>Welcome</h2>
   <p>This is the homepage of Osman Afridi. I am a software developer focusing primarily on Ruby on Rails.</p>
 
@@ -14,9 +12,8 @@ layout: default
   <p>I wear a lot of hats and work across different tech stacks. Lately I've been interested in Ruby on rails and the Javascript space with a particular interest in backbone and node.js. Prior to that I worked with Java which was less than thrilling.</p>
   <p>Outside of tech I enjoy traveling and hope to get to explore each and every country in the world before time runs out - I've managed to travel to most continents excluding Africa and Antarctica which are next on the list. I'm also a huge bookworm but have a nasty obsessive compulsive habit of committing to books long after I lose interest. Other things I enjoy in no particular order - the music of Debussy, and Edvard Grieg, cups of tea, the Lion King, beans (Heinz - I can't stress this enough) on toast.</p>
   <p>I'm always wanting to work on cool projects and love collaborating so get in touch via the usual channels...</p>
-</section>
 
-<div class="profile">
-  <img src="imgs/profile.png" alt="profile_image">
-  <p>Osman Afridi</p>
-</div>
+<!--   <div class="profile">
+    <img src="../imgs/profile.png" alt="profile_image">
+    <p>Osman Afridi</p>
+  </div> -->
