--- a/blog-posts/week4_cultural.html
+++ b/blog-posts/week4_cultural.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: page
 comments: true
 ---
-<section class="about">
   <h1>Women in tech</h1>
   <h5>Posted by Osman,
     <span id="spanDate">1st Sept 2014</span>
@@ -24,4 +23,3 @@ comments: true
 
   </div>
   <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
