--- a/blog-posts/week5_cultural.html
+++ b/blog-posts/week5_cultural.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: page
 comments: true
 ---
-<section class="about">
   <h1>Pair programming</h1>
   <h5>Posted by Osman,
     <span id="spanDate">7th Sept 2014</span>
@@ -19,4 +18,3 @@ comments: true
 
   </div>
   <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
