--- a/blog-posts/week5_technical.html
+++ b/blog-posts/week5_technical.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: page
 comments: true
 ---
-<section class="about">
   <h1>Object Oriented Programming in Ruby</h1>
   <h5>Posted by Osman,
     <span id="spanDate">7th Sept 2014</span>
@@ -86,5 +85,3 @@ end
 
   </div>
   <p> <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a> </p>
-</section>
-
