--- a/blog-posts/week6_cultural.html
+++ b/blog-posts/week6_cultural.html
@@ -1,8 +1,7 @@
 ---
-layout: default
-<!-- comments: true -->
+layout: page
+comments: true
 ---
-<section class="about">
   <h1>Stereotype threat</h1>
   <h5>Posted by Osman, 2014-09-13</h5>
   <!-- <img class="blog_img" src="../imgs/" alt="Add a blog image here"> -->
@@ -12,11 +11,6 @@ layout: default
     <p>"Stereotype threat refers to the risk of confirming negative stereotypes about an individual’s racial, ethnic, gender, or cultural group. The term was coined by the researchers Claude Steele and Joshua Aronson, who performed experiments that showed that black college students performed worse on standardized tests than their white peers when they were reminded, before taking the tests, that their racial group tends to do poorly on such exams. When their race was not emphasized, however, black students performed similarly to their white peers."</p>
 
     <p>This prompted me to reflect and think of times when I felt it and how it may have affected my achievement. </p>
-
-    <!-- Identify times when you felt it. How did it affect your achievement? What questions did you ask yourself? Did you feel it physically? If you don't think you've ever felt it, can you imagine some groups that might? What could you do to help others in that situation? -->
-
-    <!-- In your post, describe your experiences with stereotype threat and how it affected you. Then identify what you plan to do when you feel stereotype threat or suspect someone else is feeling it. How will you create meaningful feedback or ask for feedback? How will you work to change the environment you're in to make it more welcoming? How will you address it in public? -->
-
+    
   </div>
   <a href="{{ site.baseurl }}/blog-posts/index.html">Back</a>
-</section>
